Added sql integration, the log command, the log view subcommand, and support for adding tags to log entries.